fixed overflow and attempted to fix portfolio items

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -5,6 +5,7 @@
 @media screen and (max-width: 600px) {
 	header {
 		padding: 0 !important;
+		overflow-y: scroll;
 	}
 	.theme-btn {
 		width: 50px;
